# SAGA-implement

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  docker-compose.yml
.agent/: session_summary.md
.claude/: settings.local.json
docker/: rag.Dockerfile  web.Dockerfile  web_default.conf.template  web_nginx.conf
docs/: OPERATE.md  current_task.md  skill_index.json
docs/ai_journal/: changes.jsonl
examples/: demo_symbolic_regression.py
orchestrator/: README.md  server.py
rag_core/: README.md  __init__.py  config.py  pyproject.toml  server.py
rag_core/embeddings/: __init__.py  base.py  bge_m3.py
rag_core/ingest/: __init__.py  base.py  multimodal.py
rag_core/rerankers/: __init__.py  base.py  bge_reranker.py
rag_core/retrievers/: __init__.py  base.py  dense.py  hybrid.py  sparse.py
saga/: mode_controller.py  outer_loop.py  termination.py
saga/adapters/: sglang_adapter.py
saga/modules/: advanced_analyzer.py  advanced_implementer.py  advanced_optimizer.py  advanced_planner.py
saga/search/: generators.py  routers.py
scripts/: up.ps1
sglang-server/: .env.example  README.md  benchmark_50_tools_tps.py  benchmark_final.py  docker-compose.yml
sglang-server/nginx/: nginx.conf
tests/: test_advanced_modules.py  verify_math_strategy.py
vllm-server/: .env.example  .gitignore  README.md  benchmark.py  benchmark_concurrent.py  benchmark_quick.py  benchmark_tool_use.py  docker-compose.yml  entrypoint.sh
vllm-server/monitoring/: prometheus.yml
vllm-server/nginx/: nginx.conf
vllm-server/scripts/: generate-certs.sh  start.ps1  start.sh  test-api.ps1
web_client/: index.html
web_client/src/: App.jsx  style.css
web_client/src/components/: DocumentUpload.jsx  (+2 more)
